Fixed tests, updated S2 version